# modulee-engine

./: .gitignore  CHANGELOG.md  Cargo.toml  run_flamegraph.sh
benches/: benchmark_graph.json  graph_benchmark.rs  high_pass_benchmark.rs  my_benchmark.rs  piano_benchmark.json  piano_benchmark.rs  sine_benchmark.rs
src/: add_node.rs  constant_node.rs  control_update_data.rs  default_sample_rate.rs  dev_nodes.rs  fixed_size_string.rs  get_inputs_trait.rs  get_items_by_id.rs  get_nodes_by_id.rs  get_u64_seed_from_f32.rs  get_updated_group.rs  get_updated_module.rs  graph.rs  graph_data.rs  group.rs  groups_by_id.rs  has_inputs.rs  has_update.rs  id.rs  input_ids_trait.rs  lib.rs  mod.rs  module.rs  modules_by_id.rs  my_trait.rs  node.rs  node_trait.rs  node_values.rs  nodes_by_id.rs  sample_rate.rs  set_input_indexes_trait.rs  set_note_trait.rs  set_sample_rate_trait.rs  sort_topologically.rs  subtract_node.rs  values_by_id.rs  voice.rs  voice_group.rs
src/delay/: delay.rs  mod.rs
src/envelope/: curve.rs  envelope.rs  get_clamped_value.rs  get_limited_value.rs  mod.rs  slew.rs
src/filter/: all_pass.rs  filter_wrapper.rs  filter_wrapper_with_gain.rs  high_pass.rs  low_pass.rs  mod.rs
src/graph/: graph.rs  graph_data.rs  graph_test.rs  graph_update.rs  mod.rs  test_performance.rs  voices_cleaner.rs
src/math/: get_clamped_value.rs  get_limited_value.rs  mod.rs
src/module/: README.md  get_module_dependency_map.rs  get_updated_module.rs  mod.rs  module.rs  module_update.rs  modules_by_id.rs  sort_by_other_vec_order.rs  sort_modules_topologically.rs
(+118 files in other folders)
