[package]
name = "modulee-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
nohash-hasher = "0.2.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "graph_benchmark"
harness = false
