[package]
name = "modulee-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
assert_approx_eq = "1.1.0"
biquad = "0.5.0"
nohash-hasher = "0.2.0"
rand = "0.9.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "high_pass_benchmark"
harness = false
